# HackTWK

./: Dockerfile  README.md  build.sh  docker-compose.yml  main.py
Challenges/active/: README.md
Challenges/blockchain/solidity1/: Challenge.sol  Dockerfile  README.md  flag.txt  main.py
Challenges/misc/compressed-message/: ReadMe.md  Walkthrough.md  program.txt
Challenges/misc/jwtJohn/: Dockerfile  Readme.md  Walkthrough.md  build.sh  createZip.sh  flag.txt  package-lock.json  package.json
Challenges/misc/lispyDev/: .gitignore  Dockerfile  Readme.md  Walkthrough.md  build.sh  nyx.json
Challenges/misc/lostHiker/: Readme.md  Walkthrough.md  generate.py
Challenges/misc/secret-message-in-plain-sight/: ReadMe.md  Walkthrough.md  message.txt
Challenges/reversing/c-is-easy-and-secure-2/: .gdb_history  Dockerfile  Makefile  (+9 more)
WebChallenges/lispyDev/: build.sh
challenges/web/commandInjection/: Dockerfile  README.md  flag.txt  main.py  pyproject.toml
challenges/web/commandInjection/challenge1/: Dockerfile  README.md  flag.txt  main.py
challenges/web/commandInjection/challenge1/templates/: firstEncounter.html
challenges/web/commandInjection/challenge2/: Dockerfile  flag.txt
challenges/web/commandInjection/challenge2/templates/: index.html  secondEncounter.html
challenges/web/commandInjection/templates/: firstEncounter.html
commandInjection/static/: style.css
commandInjection/templates/: index.html  secondEncounter.html
src/ctf/: Main.java
templates/: firstEncounter.html  fourthEncounter.html  index.html  secondEncounter.html  thirdEncounter.html
(+101 files in other folders)
